--- a/src/stylesheets/regions/_nav.scss
+++ b/src/stylesheets/regions/_nav.scss
@@ -24,7 +24,7 @@ nav {
     }
     a {
       color: $grey-5;
-      font-size: ms(1);
+      font-size: ms(0);
       font-weight: 700;
       position: relative;
       text-decoration: none;
@@ -88,6 +88,7 @@ nav {
     }
     .menu {
       a {
+        font-size: ms(1);
         &::after {
           transform: translateY(6px);
         }
